# ai-rd

./: .env.example  .gitignore  GEMINI.example.md  Makefile  README.md  gemini_use_browser.py  pyproject.toml  requirements.txt
src/ai_rd/: __init__.py
sysprompts/: .gitignore  client.py  config.py  flimflam_ai.py  system_prompt.keep
